--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -166,3 +166,10 @@
     margin-right: 30px;
     width: 50px;
 }
+
+
+.btmfrg{
+    background-color:transparent;
+    border:0px;
+    font-family:'IBM Plex Sans Arabic';
+}
