--- a/src/components/desk/desk.css
+++ b/src/components/desk/desk.css
@@ -51,8 +51,8 @@
 
 .menur{
     position: absolute;
-    width: 75%;
-    height: 60%;
+    width: 100%;
+    height: 100px;
     background-color: #7c89a7;
     margin: auto auto;
 
