--- a/src/components/desk/desk.css
+++ b/src/components/desk/desk.css
@@ -49,11 +49,9 @@
     left: auto;
 }
 
-.menur{
-    position: absolute;
+.mainmenu{
     width: 100%;
     height: 80px;
     background-color: #7c89a7;
-    margin: auto auto;
 
 }
