--- a/src/components/desk/desk.css
+++ b/src/components/desk/desk.css
@@ -52,7 +52,12 @@
 .mainmenu{
     width: 100%;
     height: 80px;
-    background-color: #7c89a7;
+    background-color: #f7f4e7;
+
+}
+
+.bxmn{
+    width: 25%;
 
 }
 
