--- a/src/components/desk/desk.css
+++ b/src/components/desk/desk.css
@@ -52,15 +52,35 @@
 .mainmenu{
     width: 100%;
     height: 80px;
-    background-color: #f7f4e7;
+    background-color: #2fdf84;
+    display: flex;
 
 }
 
 .bxmn{
     width: 25%;
+    height: 100%;
+    font-family:'IBM Plex Sans Arabic';
+}
+.bxmnclck{
+    background-color: #DE412F;
+    width: 25%;
+    height: 100%;
+    font-family:'IBM Plex Sans Arabic';
+}
+.bxmn:hover{
+    background-color:#4FFFA4;
+}
+.mainmenu img{
+    height: 50px;
+    display: block;
+    margin: auto;
 }
 
-.iconmenu{
-    height: 70px;
 
+.mainmenu h5{
+    margin: 0;
+    display: block;
+    text-align: center;
+    font-size: 15px;
 }
